fix GT Sports plugin add simple CSS for settings page add README.md

--- a/web/src/main/web/src/less/main.less
+++ b/web/src/main/web/src/less/main.less
@@ -1,9 +1,16 @@
 @import "NowPlaying";
-
-body{
+@import "PluginSettings";
+@import "SinglePluginSettings";
+@import "ActivityList";
+@import "Settings";
+body {
   background-color: white;
 }
 
+#content {
+  max-width: 900px;
+  margin: 0 auto;
+}
 
 
 
