- make the  activity selection as a flow - all related updates for the flow process, backend, front-end

--- a/web/src/main/web/src/less/main.less
+++ b/web/src/main/web/src/less/main.less
@@ -3,6 +3,8 @@
 @import "SinglePluginSettings";
 @import "ActivityList";
 @import "Settings";
+@import "Node";
+
 body {
   background-color: white;
 }
