proper display for activity flow

--- a/web/src/main/web/src/less/PluginSettings.less
+++ b/web/src/main/web/src/less/PluginSettings.less
@@ -10,6 +10,24 @@
     h3{
       margin: 0;
     }
+
+    .tag{
+      display: inline-block;
+      border-radius: 5px;
+      font-size: 12px;
+      padding: 5px;
+      color: white;
+      font-weight: bold;
+      margin-right:5px;
+
+      &.Activity{
+        background-color: @Activity;
+      }
+
+      &.Display{
+        background-color: @Display;
+      }
+    }
   }
 
 }
