--- a/web/src/main/web/src/less/main.less
+++ b/web/src/main/web/src/less/main.less
@@ -4,9 +4,18 @@
 @import "ActivityList";
 @import "Settings";
 @import "Node";
+@import "ActivityFlow";
+@import "ActivityNode";
+@import "RequestNode";
 
+@Display: #bb4d00;
+@Activity: #00796b;
+@borderRadius: 10px;
+@flowBorderSize: 2px;
+@flowBorder: @flowBorderSize solid @Activity;
 body {
   background-color: white;
+  font-size: 15px;
 }
 
 #content {
