--- a/web/src/main/web/src/less/Node.less
+++ b/web/src/main/web/src/less/Node.less
@@ -1,3 +1,43 @@
-.Node{
-  margin-left: 50px;
+.Node {
+  display: inline-block;
+  padding-left: 5px;
+
+  //&.final {
+  //  border-left: @flowBorderSize solid @Display;
+  //  border-radius: @borderRadius;
+  //}
+
+  &.final:after {
+    content: "";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: #00c853;
+    display: inline-block;
+    position:absolute;
+    padding-top: 8px;
+    margin-left: 5px;
+    transform-origin: center center;
+    animation-name: pop-up;
+    animation-duration: 0.5s;
+  }
+
+}
+
+
+@keyframes pop-up {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+
+  50% {
+    opacity: 1;
+    transform: scale(1.5) rotate(20deg);
+    //transform: rotate(20deg);
+  }
+
+  100% {
+    transform: scale(1) rotate(0);
+  }
+
 }
